--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,3 +14,7 @@ html, body, #app {
     object-fit: cover;
     z-index: -1;
 }
+
+.el-textarea__inner {
+    background-color: rgba(255, 255, 255, 0.65) !important;
+}
